--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "pwa-chrome",
             "request": "launch",
             "name": "Open index.html",
-            "file": "c:\\Users\\User\\Desktop\\PPS\\index.html"
+            "file": "c:\\Users\\User\\Desktop\\PPS\\asd.html"
         }
     ]
 }
